[gd_scene load_steps=7 format=3 uid="uid://dux6rok0cf3n5"]

[ext_resource type="Texture2D" uid="uid://bwbf0jmi6lr58" path="res://Sunny-land-files/Sunny-land-files/Graphical Assets/environment/Props/bush.png" id="1_3ppi8"]
[ext_resource type="Script" path="res://Plant.gd" id="1_jxmod"]
[ext_resource type="Shader" path="res://Selection.gdshader" id="2_38pki"]
[ext_resource type="PackedScene" uid="uid://bx07pmkrvw2xs" path="res://selection_area_2d.tscn" id="3_epknp"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_m0fny"]
resource_local_to_scene = true
shader = ExtResource("2_38pki")
shader_parameter/line_color = Color(1, 1, 1, 1)
shader_parameter/line_thickness = 0.0

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ufd5r"]
size = Vector2(45, 27)

[node name="Plant" type="StaticBody2D"]
script = ExtResource("1_jxmod")

[node name="Sprite2D" type="Sprite2D" parent="."]
material = SubResource("ShaderMaterial_m0fny")
texture = ExtResource("1_3ppi8")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(-0.5, 0.5)
shape = SubResource("RectangleShape2D_ufd5r")

[node name="SelectionArea2D" parent="." instance=ExtResource("3_epknp")]

[node name="CollisionShape2D2" type="CollisionShape2D" parent="SelectionArea2D"]
position = Vector2(-0.5, 0.5)
shape = SubResource("RectangleShape2D_ufd5r")

[connection signal="mouse_entered" from="SelectionArea2D" to="." method="_on_selection_area_2d_mouse_entered"]
[connection signal="mouse_exited" from="SelectionArea2D" to="." method="_on_selection_area_2d_mouse_exited"]
[connection signal="selection_toggled" from="SelectionArea2D" to="." method="_on_selection_area_2d_selection_toggled"]
